2011-05-23  Miloslav Trmač  <mitr@redhat.com>

	* src/client.py (cmd_import_key): Fix help synopsis, improve command
	description.

	* tests/basic.at (new-key): Stop sending a superfluous password.

	* doc/sign-many.py (sign_rpm): Split from main.
	(sign_rpms): New function.
	(main): Demonstrate using sign_rpm or sign_rpms.

2011-05-19  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main)
	* src/server_common.py (db_open)
	* src/server.py (cmd_new_user, cmd_new_key, cmd_import_key)
	(cmd_grant_key_access): Port to sqlalchemy 0.5.

	* tests/basic.at
	* tests/imported-public-key.asc
	* tests/imported-secret-key.asc
	* tests/testrpm.spec
	* tests/testsuite.at: New files.
	* configure.ac: Initialize test suite.  Define AUTOM4TE.
	* Makefile.am (TESTFILES): New variable.
	(EXTRA_DIST): Distribute the test suite.
	(src/sigul, src/sigul_bridge, src/sigul_server)
	(src/sigul_server_add_admin, src/sigul_server_create_db): Make the
	scripts executable even before installing, to allow running them from
	the test suite.
	(clean-local, check-local, installcheck-local)
	($(top_srcdir)/tests/package.m4, $(top_srcdir)/tests/testsuite)
	(atconfig): New rules.

	* src/utils.py (read_password): Raise EOFError on unexpected EOF instead
	of looping infinitely.

2011-05-09  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main): Only import readline when necessary,
	to avoid sending escape sequences to stdout when not interactive.

	* src/server_add_admin (main): New option --name.

	* src/server_add_admin.py (AddAdminConfiguration._read_configuration):
	Fix so that this doesn't crash on every start.

	* src/utils.py (create_basic_parser)
	(optparse_parse_options_only): Split from get_daemon_options().
	(get_daemon_options): Drop parameters batch, daemon_options: let
	original users of these parameters handle the parser directly.
	* src/server_add_admin.py (main)

	* src/server_create_db.py (main): Use utils.create_basic_parser and