@@ -1,0 +1,59 @@
+-----BEGIN PGP PRIVATE KEY BLOCK-----
+Version: GnuPG v1.4.11 (GNU/Linux)
+
+lQO+BE3ap6QBCAC8Qmvnp1BNWNyoWtFTn1x5btEive6zINqWWGqtbT1tt5qO/Fdb
+CPPzks3xS55pDr4ggYbmnsuszTPjbARQTtqK8viowHPIF7ehl+U293z/qMqJOkHm
+esLFtyttVSKCPQyCRARXSX/aIwRifeaW7fOb1KM5rcNqUJ1OfdZNCnIV1pV4XFgu
+5n1U4YCeo4qqnu5g/XZ0zmTw79qGkIIBPqEspkKFva7uajDBmryTrE4yFNs24vOh
+3DB4nOa+YD/rkjVBlUeD1vRcenKPzYffHgiMpZNDKPhT4+yluEsbDXX4Dr56hwud
+jyBaKcOj28iINPVWriZMq8GdCm3q9rsUvBkdABEBAAH+AwMC3ABzBMsgIsJgi+lj
+BIdOYSLELKVs7OVrLpZSmahQs9srrOUStM2P4oYOQQGXtHQIPZcI+9hCpaLAwIHl
+V9/k/lI3uIRPfIRYF4RYY/FgoU6a2KoW+hnb49wXe+ra1vx9suu8JnG8IkCPHGZ0
+e25fMHYN/mTXWBIkcRkTkvOWSV/k5eM+5hSv1fSyFxBH6HPVFFOt6bYzouDpALFY
+eoqhQKS4ZKdxc3mI/0GEstctarrV0xw4dhRq/3uxp2/WT+kHwzGs6WAVpWGiuMJl
+qn/uvP7SbvWXa7gnxLTu5/zywiCF/V7PK7DbxYchqrMWVJlx9x0P1lXq4gOah1Oc
+vCUXfbOoLhGzloR0e4bvEOzNlVOjMMiOCG6eR0raX02WSE9KNRteqmU4THZ3OD4H
+xWWVZHLx9OApUBV3YbB4nh+mE4E7JEAmLxc4EfY5J+3WrrFNduLbGoQxjPvCOrxP
+ULuFJxZ4OwuORbW0rpdiRGGffEjpzmEEYrXgcyt6yrQQMth5j4Dst5UlYoNiz2OQ
+SlK76r1qu4/2T0dp613hoDZi9S+W/aKgNP+iYVX53C0vFjyY/50f3rphbuWPAc5T
+AS2T2JCw8MFzjsek7BEAX/505pPnhYcfigjMj+tuE7OLxVaCYIBS4alWioM4OBhm
+vT6uncumKHo/cND5qfs5O0ufkvpzGdtjayc+HZC7pdNDFmwqjQIsDOFQtlTfsCvn
+YdtW+Dy1m2yDqoKV7It0f7yPZsTofSo0TsI3J2JAP+7dHyPC2/SD8A2n9cv/3BYc
+bFP5l3HOzRCCb7D5DxeVvQ2hBIfp53YNgZ+so31481hxOjFbZiUYm+lptuLvCHum
+uBIghW7wMFIkKx2ktI5pgEzowk7s1843AvG01P41hjR0iZ9zZTgOBQtZ0V01UVeT
+27QlUmVhbCBOYW1lIChDb21tZW50KSA8a2V5QGV4YW1wbGUuY29tPokBOAQTAQIA
+IgUCTdqnpAIbAwYLCQgHAwIGFQgCCQoLBBYCAwECHgECF4AACgkQ3J+/KTla9+fb
+OAf+NIeKhlLpvJt5SkxHvF2fLV2QovJO8ZlQsGA5cAfBK4XslbfH3WK8AuCfm1aR
+RtiCOQvBu38a/rCkmUbHQqDcu7d+FcM6PkIcJmhVW7B2NxSrj02em3KZImYkVdz+
+eCJ9UCVRwbipo6YMw19NLgRnNkoj5LKWcaATLmqlrQCDzPT99KIh187Dnkf1RzpV
+jg0dQMhV7wTDEI8Hi/AH8LWiJ/iQf5e60duawl8KiZE1iPM/kC6j1PxIE1ZmO5xJ
+loAyFkSk9j7KhqokOK/tIFNdGa0BI1KTdgnMR5imtFFfO1rBUkhbP9MfmfIZblOt
+paibL+sjwcPvTntjAoDiQFgzip0DvgRN2qekAQgA2FhpEBIGRk4pi8b69eDjNud1
+gHidAoxn/+LFOpneomp4S24eF8OSM/Dygdmp5Sd426Wk2GuUbnB0zlR4Llkp77hN
+U/ElZkM0l3sujn4upkM2ggV9STNqenjm9GCafxgdNEQ92In4kO3p+6yAR0+il+X3
+aAcBxVoZMLc+JWkLO8m6xhSuyq1jaiCwEkkLRl9gVeFVIEwE2L70XL//PAU5csAy
+SbEwUTukSEQZKH22VMzDHIi54UfFbC7op5gSLgClPwLcxk6o41LwlG+ASEsd2uoT
+AsZ+wCRxANd3R9t8PJtOcLqMhP5ogDv5cwBwv5jncKGR6bxzK6rS8DCsryQedwAR
+AQAB/gMDAtwAcwTLICLCYN9mr1yKN+yhjXXPWnc99h2wcEkuM8RWJ8jzCx6oE0Dh
+Il+hewGDckU4xKJVqRTB1cMRxKjkLkH8BiGrkeIVo16z2THGdJNk+UGmjI8LRVEK
+y+rIOrq20u6DVflsKNAusDT5q+vPFsK4gpwAi5HRrd/vJfoccqrpoFwcMDmZy/EW
+7pJ7M/Q9plNA5EzVV1iBQacuhZYRi0HF1q9yGhulIm5oA+i8QguaY+KC/Rnke0v0
+4XdFn3XCYYADA1RpsSKP6scY205/4kQJ13ldNqzZiih1iXAgZHRtHryrLBvzbb1Q
+wsHP4qHFqG1AQf06wLyCz469v+yji+zqwwLgORHAwDt/XodGcicvILgKwTRoHqxX
+IxsfZ2IWy/o5r7lFtPtwFQ0mgzMPTJB6W1GrrIgUxpzg+RG8msvAahc0XgZJ3Bs0
+iUDh+N4otQtBQ7YSC5sDPk5u7rMh2o5H9SNq7NLG0bsvFCCVxhC5jgNLuCfRwG6j
+u8JGCbTcqwaVTZPEz+EClmfv4xPXgzCbnsnNjfYeOtiV+sNLmfKbe2+G1+LkDsLS
+pyn3T0pdskalzbMrNtUp2fbSmkI6VcP/2TeAvTrUovrcdGjqpvC4iDxBHm3GVvnR
+rlQUok4AoZq9yVkwTTfNEHXxQx0BLtsY6Ny8C1yvEv9IHlKHPiGy9Wh3ONY+m+8f
+cR6VugXzl7Z8+OtsmiU2qaD523YWr1Kpy5jIL1ZP68K5FPY3/tGNZLxo1RV7c4k9
+gQr/viHSWS+ff0e+C4+72Cdzz7GgA7ycOH/jqmmR3cuKESocMXkn8qc0Eaxdh+jC
+Wl3DkMtRVf1K704XXVv2V+7Xr0P6r0g2K8dfjGjH+KVDDMkP4bH8s6fxolYZ4uVH
+TR4h+9/cFTEflA8x3yItpDz7UleJAR8EGAECAAkFAk3ap6QCGwwACgkQ3J+/KTla
+9+f8BAf/Vycmh5WKQN0TbG9iNJ8XElzz3WDExC7iomG+z+TcGKE7SOuLpeykiCuc
+qA2XiYX33NJMffunzt5vnmPta5ZMbTsj6ZD4JhmsaNvfrYqDff7HUT/bMDLerBKg
+rnJH97EPsEIbt0bzH3hUln08p1Eas8MWUddTVaTj5QuBzkKmjFt9XMP6ntAJSUiM
+URFfO9bmLHKvjWgxow6CA8b7ubI8Mu2zhoaERW8TzglIN1tr4DLICfTUg2A29YmF
+D09BcSUW18EirjFzP5r7+Xl3NfKEGP0fF+JfnYp1O9AIXrA9Q8Ee8oU1Y2t9JEFh
+OxHT1NoB9Rx9VuAYAah0ySshNF5gaw==
+=Itv/
+-----END PGP PRIVATE KEY BLOCK-----
